--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,8 @@
     <title>Open Source Tools</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
-    <!--
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <!--
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     -->
     <style type="text/css">
@@ -78,11 +78,21 @@
       });
 
       var SearchBar = React.createClass({
+        getInitialState: function() {
+          return {textSearch: ''}
+        },
+        handleQueryChange: function(e) {
+          this.setState({textSearch: e.target.value});
+        },
         render: function() {
           return (
             <div id="search_bar">
               <form>
-                <input type="text" placeholder="Search..." />
+                <input type="text"
+                  placeholder="Enter search text..."
+                  value={this.state.textSearch}
+                  onChange={this.handleQueryChange}
+                  />
                 <input type="submit" />
               </form>
               <GoalList />
