--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,9 @@
           return {active: false}
         },
         handleClick: function() {
-          this.setState({active: !this.state.active});
+          var active = !this.state.active
+          this.setState({active: active});
+          this.props.onStateChange({active: active, goal: this.props.goal});
         },
         render: function() {
           var image_state = (this.state.active) ? 'color' : 'grayscale';
@@ -52,26 +54,28 @@
       });
 
       var GoalList = React.createClass({
+        // TODO move the addGoalFilter and removeGoalFilter logic to this list
+        // which bubbles up the goals to the searchbar when it's changed
         render: function() {
           return (
             <div>
-              <GoalItem image="sdg-icon-01" goal="1. No Poverty" />
-              <GoalItem image="sdg-icon-02" goal="2. Zero Hunger" />
-              <GoalItem image="sdg-icon-03" goal="3. Good Health and Well-Being" />
-              <GoalItem image="sdg-icon-04" goal="4. Quality Education" />
-              <GoalItem image="sdg-icon-05" goal="5. Gender Equality" />
-              <GoalItem image="sdg-icon-06" goal="6. Clean Water and Sanitation" />
-              <GoalItem image="sdg-icon-07" goal="7. Affordable and Clean Energy" />
-              <GoalItem image="sdg-icon-08" goal="8. Decent Work and Economic Growth" />
-              <GoalItem image="sdg-icon-09" goal="9. Industry, Innovation and Infrastructure" />
-              <GoalItem image="sdg-icon-10" goal="10. Reduced Inequalities" />
-              <GoalItem image="sdg-icon-11" goal="11. Sustainable Cities and Communities" />
-              <GoalItem image="sdg-icon-12" goal="12. Responsible Consumption and Production" />
-              <GoalItem image="sdg-icon-13" goal="13. Climate Action" />
-              <GoalItem image="sdg-icon-14" goal="14. Life Below Water" />
-              <GoalItem image="sdg-icon-15" goal="15. Life on Land" />
-              <GoalItem image="sdg-icon-16" goal="16. Peace, Justice and Strong Institutions" />
-              <GoalItem image="sdg-icon-17" goal="17. Partnerships for the Goals" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-01" goal="1. No Poverty" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-02" goal="2. Zero Hunger" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-03" goal="3. Good Health and Well-Being" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-04" goal="4. Quality Education" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-05" goal="5. Gender Equality" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-06" goal="6. Clean Water and Sanitation" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-07" goal="7. Affordable and Clean Energy" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-08" goal="8. Decent Work and Economic Growth" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-09" goal="9. Industry, Innovation and Infrastructure" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-10" goal="10. Reduced Inequalities" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-11" goal="11. Sustainable Cities and Communities" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-12" goal="12. Responsible Consumption and Production" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-13" goal="13. Climate Action" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-14" goal="14. Life Below Water" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-15" goal="15. Life on Land" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-16" goal="16. Peace, Justice and Strong Institutions" />
+              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-17" goal="17. Partnerships for the Goals" />
             </div>
           );
         },
@@ -79,23 +83,48 @@
 
       var SearchBar = React.createClass({
         getInitialState: function() {
-          return {textSearch: ''}
+          return {textQuery: '', goalsQuery: []}
         },
-        handleQueryChange: function(e) {
-          this.setState({textSearch: e.target.value});
+        handleQueryTextChange: function(e) {
+          this.setState({textQuery: e.target.value});
+        },
+        handleSubmit: function(e) {
+          e.preventDefault();
+          var textQuery = this.state.textQuery.trim();
+          var goalsQuery = this.state.goalsQuery.join('|');
+          // TODO: enable this to bubble submission up to main form for searching
+          // this.props.onSubmit({textQuery: textQuery, goalsQuery: goalsQuery});
+        },
+        addGoalFilter: function(goal) {
+          this.setState({
+            goalsQuery: this.state.goalsQuery.concat(goal)
+          });
+        },
+        removeGoalFilter: function(goal) {
+          var index = this.state.goalsQuery.indexOf(goal);
+          this.setState({
+            goalsQuery: this.state.goalsQuery.filter((x, i) => i != index )
+          });
+        },
+        handleGoalsChange: function(goalItem) {
+          if (goalItem.active) {
+            this.addGoalFilter(goalItem.goal)
+          } else {
+            this.removeGoalFilter(goalItem.goal);
+          }
         },
         render: function() {
           return (
             <div id="search_bar">
-              <form>
+              <form onSubmit={this.handleSubmit}>
                 <input type="text"
                   placeholder="Enter search text..."
-                  value={this.state.textSearch}
-                  onChange={this.handleQueryChange}
+                  value={this.state.textQuery}
+                  onChange={this.handleQueryTextChange}
                   />
-                <input type="submit" />
+                <input type="submit"/>
               </form>
-              <GoalList />
+              <GoalList onGoalsChanged={this.handleGoalsChange} />
             </div>
           );
         },
@@ -115,17 +144,37 @@
         render: function() {
           return (
             <div>
-              <SearchBar />
+              <SearchBar goals={this.props.goals} />
               <ProjectList projects={this.props.projects} />
             </div>
           );
         },
       });
 
+      var sustainableGoals = [
+        { image: "sdg-icon-01", goal: "1. No Poverty" },
+        { image: "sdg-icon-02", goal: "2. Zero Hunger" },
+        { image: "sdg-icon-03", goal: "3. Good Health and Well-Being" },
+        { image: "sdg-icon-04", goal: "4. Quality Education" },
+        { image: "sdg-icon-05", goal: "5. Gender Equality" },
+        { image: "sdg-icon-06", goal: "6. Clean Water and Sanitation" },
+        { image: "sdg-icon-07", goal: "7. Affordable and Clean Energy" },
+        { image: "sdg-icon-08", goal: "8. Decent Work and Economic Growth" },
+        { image: "sdg-icon-09", goal: "9. Industry, Innovation and Infrastructure" },
+        { image: "sdg-icon-10", goal: "10. Reduced Inequalities" },
+        { image: "sdg-icon-11", goal: "11. Sustainable Cities and Communities" },
+        { image: "sdg-icon-12", goal: "12. Responsible Consumption and Production" },
+        { image: "sdg-icon-13", goal: "13. Climate Action" },
+        { image: "sdg-icon-14", goal: "14. Life Below Water" },
+        { image: "sdg-icon-15", goal: "15. Life on Land" },
+        { image: "sdg-icon-16", goal: "16. Peace, Justice and Strong Institutions" },
+        { image: "sdg-icon-17", goal: "17. Partnerships for the Goals" },
+      ]
+
       var projects = [{}]
 
       ReactDOM.render(
-        <OpenSourceGoalsTable projects={projects} />,
+        <OpenSourceGoalsTable projects={projects} goals={sustainableGoals} />,
         document.getElementById("container")
       );
       // To get started with this tutorial running your own code, simply remove
