--- a/index2.html
+++ b/index2.html
@@ -54,28 +54,49 @@
       });
 
       var GoalList = React.createClass({
-        // TODO move the addGoalFilter and removeGoalFilter logic to this list
-        // which bubbles up the goals to the searchbar when it's changed
+        getInitialState: function() {
+          return {selectedGoals: []};
+        },
+        addGoal: function(goal) {
+          var newGoals = this.state.goals.concat(goal);
+          this.setState({selectedGoals: newGoals});
+          return newGoals;
+        },
+        removeGoal: function(goal) {
+          var index = this.state.goals.indexOf(goal);
+          var newGoals = this.state.goals.filter((x, i) => i != index );
+          this.setState({selectedGoals: newGoals});
+          return newGoals;
+        },
+        handleGoalStateChange: function(goalItem) {
+          if (goalItem.active) {
+            var newGoals = this.addGoal(goalItem.goal)
+          } else {
+            var newGoals = this.removeGoal(goalItem.goal);
+          }
+
+          this.props.onGoalsChanged(newGoals);
+        },
         render: function() {
           return (
             <div>
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-01" goal="1. No Poverty" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-02" goal="2. Zero Hunger" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-03" goal="3. Good Health and Well-Being" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-04" goal="4. Quality Education" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-05" goal="5. Gender Equality" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-06" goal="6. Clean Water and Sanitation" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-07" goal="7. Affordable and Clean Energy" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-08" goal="8. Decent Work and Economic Growth" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-09" goal="9. Industry, Innovation and Infrastructure" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-10" goal="10. Reduced Inequalities" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-11" goal="11. Sustainable Cities and Communities" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-12" goal="12. Responsible Consumption and Production" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-13" goal="13. Climate Action" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-14" goal="14. Life Below Water" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-15" goal="15. Life on Land" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-16" goal="16. Peace, Justice and Strong Institutions" />
-              <GoalItem onStateChange={this.props.onGoalsChanged} image="sdg-icon-17" goal="17. Partnerships for the Goals" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-01" goal="1. No Poverty" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-02" goal="2. Zero Hunger" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-03" goal="3. Good Health and Well-Being" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-04" goal="4. Quality Education" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-05" goal="5. Gender Equality" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-06" goal="6. Clean Water and Sanitation" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-07" goal="7. Affordable and Clean Energy" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-08" goal="8. Decent Work and Economic Growth" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-09" goal="9. Industry, Innovation and Infrastructure" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-10" goal="10. Reduced Inequalities" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-11" goal="11. Sustainable Cities and Communities" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-12" goal="12. Responsible Consumption and Production" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-13" goal="13. Climate Action" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-14" goal="14. Life Below Water" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-15" goal="15. Life on Land" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-16" goal="16. Peace, Justice and Strong Institutions" />
+              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-17" goal="17. Partnerships for the Goals" />
             </div>
           );
         },
@@ -92,26 +113,12 @@
           e.preventDefault();
           var textQuery = this.state.textQuery.trim();
           var goalsQuery = this.state.goalsQuery.join('|');
+          //console.log({textQuery: textQuery, goalsQuery: goalsQuery});
           // TODO: enable this to bubble submission up to main form for searching
           // this.props.onSubmit({textQuery: textQuery, goalsQuery: goalsQuery});
         },
-        addGoalFilter: function(goal) {
-          this.setState({
-            goalsQuery: this.state.goalsQuery.concat(goal)
-          });
-        },
-        removeGoalFilter: function(goal) {
-          var index = this.state.goalsQuery.indexOf(goal);
-          this.setState({
-            goalsQuery: this.state.goalsQuery.filter((x, i) => i != index )
-          });
-        },
-        handleGoalsChange: function(goalItem) {
-          if (goalItem.active) {
-            this.addGoalFilter(goalItem.goal)
-          } else {
-            this.removeGoalFilter(goalItem.goal);
-          }
+        handleGoalsChange: function(goals) {
+          this.setState({goalsQuery: goals});
         },
         render: function() {
           return (
