Changed goals to dynamic

--- a/index2.html
+++ b/index2.html
@@ -57,46 +57,36 @@
         getInitialState: function() {
           return {selectedGoals: []};
         },
-        addGoal: function(goal) {
-          var newGoals = this.state.goals.concat(goal);
+        selectGoal: function(goal) {
+          var newGoals = this.state.selectedGoals.concat(goal);
           this.setState({selectedGoals: newGoals});
           return newGoals;
         },
-        removeGoal: function(goal) {
-          var index = this.state.goals.indexOf(goal);
-          var newGoals = this.state.goals.filter((x, i) => i != index );
+        deselectGoal: function(goal) {
+          var index = this.state.selectedGoals.indexOf(goal);
+          var newGoals = this.state.selectedGoals.filter((x, i) => i != index );
           this.setState({selectedGoals: newGoals});
           return newGoals;
         },
         handleGoalStateChange: function(goalItem) {
           if (goalItem.active) {
-            var newGoals = this.addGoal(goalItem.goal)
+            var newGoals = this.selectGoal(goalItem.goal)
           } else {
-            var newGoals = this.removeGoal(goalItem.goal);
+            var newGoals = this.deselectGoal(goalItem.goal);
           }
-
           this.props.onGoalsChanged(newGoals);
         },
         render: function() {
+          var goalItemNodes = this.props.goals.map(function(goalData) {
+            return (
+              <GoalItem key={goalData.id}
+                image={goalData.image} goal={goalData.goal}
+                onStateChange={this.handleGoalStateChange} />
+            );
+          }.bind(this));
           return (
-            <div>
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-01" goal="1. No Poverty" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-02" goal="2. Zero Hunger" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-03" goal="3. Good Health and Well-Being" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-04" goal="4. Quality Education" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-05" goal="5. Gender Equality" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-06" goal="6. Clean Water and Sanitation" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-07" goal="7. Affordable and Clean Energy" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-08" goal="8. Decent Work and Economic Growth" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-09" goal="9. Industry, Innovation and Infrastructure" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-10" goal="10. Reduced Inequalities" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-11" goal="11. Sustainable Cities and Communities" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-12" goal="12. Responsible Consumption and Production" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-13" goal="13. Climate Action" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-14" goal="14. Life Below Water" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-15" goal="15. Life on Land" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-16" goal="16. Peace, Justice and Strong Institutions" />
-              <GoalItem onStateChange={this.handleGoalStateChange} image="sdg-icon-17" goal="17. Partnerships for the Goals" />
+            <div className="goalList">
+              {goalItemNodes}
             </div>
           );
         },
@@ -113,7 +103,7 @@
           e.preventDefault();
           var textQuery = this.state.textQuery.trim();
           var goalsQuery = this.state.goalsQuery.join('|');
-          //console.log({textQuery: textQuery, goalsQuery: goalsQuery});
+          // console.log({textQuery: textQuery, goalsQuery: goalsQuery});
           // TODO: enable this to bubble submission up to main form for searching
           // this.props.onSubmit({textQuery: textQuery, goalsQuery: goalsQuery});
         },
@@ -131,7 +121,7 @@
                   />
                 <input type="submit"/>
               </form>
-              <GoalList onGoalsChanged={this.handleGoalsChange} />
+              <GoalList goals={this.props.goals} onGoalsChanged={this.handleGoalsChange} />
             </div>
           );
         },
@@ -159,23 +149,23 @@
       });
 
       var sustainableGoals = [
-        { image: "sdg-icon-01", goal: "1. No Poverty" },
-        { image: "sdg-icon-02", goal: "2. Zero Hunger" },
-        { image: "sdg-icon-03", goal: "3. Good Health and Well-Being" },
-        { image: "sdg-icon-04", goal: "4. Quality Education" },
-        { image: "sdg-icon-05", goal: "5. Gender Equality" },
-        { image: "sdg-icon-06", goal: "6. Clean Water and Sanitation" },
-        { image: "sdg-icon-07", goal: "7. Affordable and Clean Energy" },
-        { image: "sdg-icon-08", goal: "8. Decent Work and Economic Growth" },
-        { image: "sdg-icon-09", goal: "9. Industry, Innovation and Infrastructure" },
-        { image: "sdg-icon-10", goal: "10. Reduced Inequalities" },
-        { image: "sdg-icon-11", goal: "11. Sustainable Cities and Communities" },
-        { image: "sdg-icon-12", goal: "12. Responsible Consumption and Production" },
-        { image: "sdg-icon-13", goal: "13. Climate Action" },
-        { image: "sdg-icon-14", goal: "14. Life Below Water" },
-        { image: "sdg-icon-15", goal: "15. Life on Land" },
-        { image: "sdg-icon-16", goal: "16. Peace, Justice and Strong Institutions" },
-        { image: "sdg-icon-17", goal: "17. Partnerships for the Goals" },
+        { id: 1, image: "sdg-icon-01", goal: "1. No Poverty" },
+        { id: 2, image: "sdg-icon-02", goal: "2. Zero Hunger" },
+        { id: 3, image: "sdg-icon-03", goal: "3. Good Health and Well-Being" },
+        { id: 4, image: "sdg-icon-04", goal: "4. Quality Education" },
+        { id: 5, image: "sdg-icon-05", goal: "5. Gender Equality" },
+        { id: 6, image: "sdg-icon-06", goal: "6. Clean Water and Sanitation" },
+        { id: 7, image: "sdg-icon-07", goal: "7. Affordable and Clean Energy" },
+        { id: 8, image: "sdg-icon-08", goal: "8. Decent Work and Economic Growth" },
+        { id: 9, image: "sdg-icon-09", goal: "9. Industry, Innovation and Infrastructure" },
+        { id: 10, image: "sdg-icon-10", goal: "10. Reduced Inequalities" },
+        { id: 11, image: "sdg-icon-11", goal: "11. Sustainable Cities and Communities" },
+        { id: 12, image: "sdg-icon-12", goal: "12. Responsible Consumption and Production" },
+        { id: 13, image: "sdg-icon-13", goal: "13. Climate Action" },
+        { id: 14, image: "sdg-icon-14", goal: "14. Life Below Water" },
+        { id: 15, image: "sdg-icon-15", goal: "15. Life on Land" },
+        { id: 16, image: "sdg-icon-16", goal: "16. Peace, Justice and Strong Institutions" },
+        { id: 17, image: "sdg-icon-17", goal: "17. Partnerships for the Goals" },
       ]
 
       var projects = [{}]
