--- a/index.html
+++ b/index.html
@@ -5,18 +5,9 @@
     <title>Open Source Tools</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
-    <style type="text/css">
-      .goal_img {
-        max-width: 15%;
-        cursor: pointer;
-        cursor: hand;
-      }
-      .entry_img {
-        max-width: 150px;
-        float: left;
-        margin: 10px;
-      }
-    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdn.blockspring.com/blockspring.js"></script>
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <div id="container"></div>
